--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
                     >Apa aja sih lombanya?</span
                   >
                 </li>
-                <li class="group relative">
+                <!-- <li class="group relative">
                   <button
                     onclick="submissionLomba()"
                     class="decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
@@ -206,7 +206,7 @@
                     class="absolute top-8 left-0 z-30 hidden h-auto w-36 rounded-sm bg-primary-25 px-3 py-2 text-xs text-neutral-900 group-hover:block"
                     >Pengumpulan karya lomba disini!</span
                   >
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -641,7 +641,7 @@
                   ></span>
                 </button>
                 <a
-                  href="https://drive.google.com/file/d/13VsJ3OtOUk1WO-9ZUztMxzjOk8m1Wotv/view?usp=drivesdk"
+                  href="https://drive.google.com/file/d/13pQ15IBosZVQ3qzbfbInzu_UvNkl8Qwa/view?usp=drivesdk"
                   target="_blank"
                   class="group decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook
@@ -708,7 +708,7 @@
                   ></span>
                 </button>
                 <a
-                  href="https://drive.google.com/file/d/13b2dJmiupKwzvYtkkDfOM_LkyiSnxdpp/view?usp=drivesdk"
+                  href="https://drive.google.com/file/d/14-ypR3qYGpmXxDLZjaxxiF22Uuh_k-bO/view?usp=drivesdk"
                   target="_blank"
                   class="group decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook
@@ -736,7 +736,7 @@
                   data-aos="fade-right"
                   class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
-                  Essai
+                  Esai
                 </p>
               </div>
               <!-- text-content -->
@@ -773,7 +773,7 @@
                   ></span>
                 </button>
                 <a
-                  href="https://drive.google.com/file/d/13XfCabMIKSIVPl7aAawM8elxLM_kLN66/view?usp=drivesdk"
+                  href="https://drive.google.com/file/d/13r-KXOPdMpP3b66nn0nNFPnkcNruHu_R/view?usp=drivesdk"
                   target="_blank"
                   class="group decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook
@@ -828,7 +828,7 @@
                 class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
                 <button
-                  onclick="daftarLomba('podcast')"
+                  onclick="daftarLomba('poster')"
                   class="group relative box-border overflow-hidden rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 transition-all duration-300 md:px-10 md:py-3"
                 >
                   <p
