update content poster

--- a/src/index.html
+++ b/src/index.html
@@ -815,9 +815,7 @@
                 >
                   Merupakan kompetisi yang menyediakan karya visual yang
                   berwarna-warni, yang memudahkan untuk menyuarakan masalah yang
-                  terkait dan sesuai untuk ditampilkan di tempat umum. Kompetisi
-                  Poster bisa diikuti oleh SMA sederajat dan mahasiswa aktif
-                  dari seluruh perguruan tinggi. Kompetisi Poster bisa diikuti
+                  terkait dan sesuai untuk ditampilkan di tempat umum. Kompetisi Poster bisa diikuti
                   oleh SMA sederajat dan mahasiswa aktif dari seluruh perguruan
                   tinggi dengan mengusung tema "Great Creation Start With
                   Yourself".
