--- a/src/index.html
+++ b/src/index.html
@@ -641,7 +641,7 @@
                   ></span>
                 </button>
                 <a
-                  href="https://drive.google.com/file/d/1hS1npDohLAGcG4Oi5k2GB6-UVazX_23w/view?usp=drivesdk"
+                  href="https://drive.google.com/file/d/18V31zvTfZ032MDNoGkdvRV2FEkXA5ULY/view?usp=sharing"
                   target="_blank"
                   class="group decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook
@@ -708,7 +708,7 @@
                   ></span>
                 </button>
                 <a
-                  href="https://drive.google.com/file/d/1KxpxMa81KD7R4z_wE7SiK6jxcza8aRZF/view?usp=drivesdk"
+                  href="https://drive.google.com/file/d/1HFKYwh3GiVIAOCd-4eiqi_fjMBOfubjt/view?usp=sharing"
                   target="_blank"
                   class="group decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook
@@ -773,7 +773,7 @@
                   ></span>
                 </button>
                 <a
-                  href="https://drive.google.com/file/d/1e76tquMWjKEczMiY62LKxe4JyIY1lC2z/view?usp=drivesdk"
+                  href="https://drive.google.com/file/d/1tOZGLBus3Ww4l0ROfuMk5gnOkAgzE7EP/view?usp=sharing"
                   target="_blank"
                   class="group decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook
@@ -839,7 +839,7 @@
                   ></span>
                 </button>
                 <a
-                  href="https://drive.google.com/file/d/1GHVmU6dYepmff-UUBR3HLbneQzsCx9eU/view?usp=drivesdk"
+                  href="https://drive.google.com/file/d/10v2iYVQ_GSod0XAIwc5dv3_1_57V4FKO/view?usp=sharing"
                   target="_blank"
                   class="group decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook
