update linkLomba and show nav submission

--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
                     >Apa aja sih lombanya?</span
                   >
                 </li>
-                <!-- <li class="group relative">
+                <li class="group relative">
                   <button
                     onclick="submissionLomba()"
                     class="decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
@@ -206,7 +206,7 @@
                     class="absolute top-8 left-0 z-30 hidden h-auto w-36 rounded-sm bg-primary-25 px-3 py-2 text-xs text-neutral-900 group-hover:block"
                     >Pengumpulan karya lomba disini!</span
                   >
-                </li> -->
+                </li>
               </ul>
             </div>
           </div>
@@ -1257,7 +1257,7 @@
                 </p>
               </div>
               <div
-                class="flex h-36 w-full flex-col justify-center gap-3 bg-primary-25 px-5 text-center text-sm"
+                class="flex h-20 w-full flex-col justify-center gap-3 bg-primary-25 px-5 text-center text-sm"
               >
                 <a
                   id="btnSubmissionBatch1"
@@ -1269,7 +1269,7 @@
                 <a
                   id="btnSubmissionBatch2"
                   target="_blank"
-                  class="inline-block border-neutral-300 bg-primary-0 py-3 font-medium text-neutral-600 shadow-lg"
+                  class="hidden border-neutral-300 bg-primary-0 py-3 font-medium text-neutral-600 shadow-lg"
                 >
                   Submission Batch 2
                 </a>
