update responsive desc techminar

--- a/src/index.html
+++ b/src/index.html
@@ -519,7 +519,7 @@
               </h3>
               <h5
                 data-aos="fade-right"
-                class="text-shadow-hero-md mb-3 text-center text-xs tracking-normal text-neutral-100 sm:text-sm md:mb-4 md:text-3xl"
+                class="text-shadow-hero-md mb-3 text-center text-sm tracking-normal text-neutral-100 sm:text-sm md:mb-4 md:text-3xl"
               >
 				Creativity and Innovation of Art in Technology
               </h5>
@@ -533,7 +533,7 @@
               </div>
               <div data-aos="fade-right" data-aos-delay="50" class="">
                 <p
-                  class="mb-5 text-xl leading-relaxed text-neutral-50 md:leading-loose px-20"
+                  class="mb-5 text-left md:!text-center text-xs leading-relaxed text-neutral-50 md:leading-loose lg:px-20"
                 >
 				Techminar merupakan puncak acara dari rangkaian BYTESFEST yang menjadi acara tahunan yang diadakan oleh HMP MIKROPTIK UNS.  "Creativity and Innovation of Art in Technology" merupakan tema Techminar pada tahun ini yang mengajak para peserta baik siswa, mahasiswa maupun masyarakat umum untuk menambah wawasan tentang teknologi khususnya penerapan teknologi di bidang seni.
                 </p>
