--- a/src/index.html
+++ b/src/index.html
@@ -500,7 +500,7 @@
 
 
 	<!-- WEBINAR SECTION END -->
-    <div id="webinar" class="relative bg-primary-800 py-32">
+    <div id="webinar" class="relative bg-primary-800 pt-10 pb-32 md:py-32">
       <!-- container -->
       <div class="mx-auto px-5 lg:w-[1200px] lg:px-0">
         <div class="flex w-full flex-col lg:flex-row-reverse">
@@ -533,7 +533,7 @@
               </div>
               <div data-aos="fade-right" data-aos-delay="50" class="">
                 <p
-                  class="mb-5 text-left md:!text-center text-xs leading-relaxed text-neutral-50 md:leading-loose lg:px-20"
+                  class="mb-5 text-left md:!text-center md:text-xl text-xs leading-relaxed text-neutral-50 md:leading-loose lg:px-20"
                 >
 				Techminar merupakan puncak acara dari rangkaian BYTESFEST yang menjadi acara tahunan yang diadakan oleh HMP MIKROPTIK UNS.  "Creativity and Innovation of Art in Technology" merupakan tema Techminar pada tahun ini yang mengajak para peserta baik siswa, mahasiswa maupun masyarakat umum untuk menambah wawasan tentang teknologi khususnya penerapan teknologi di bidang seni.
                 </p>
@@ -544,9 +544,8 @@
 		</div>
 	</div>
 		<div class="text-center my-4 pt-4 flex w-full justify-center gap-10">
-			<a 
-				href="https://s.id/Techminar"
-				target="_blank"
+			<button 
+				onclick="daftarWebinar()"
 				class="group relative box-border overflow-hidden rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 transition-all duration-300 md:px-10 md:py-3"
 			>
 				<p
@@ -557,7 +556,7 @@
 				<span
 				class="absolute top-0 left-0 block h-full w-0 bg-primary-200 shadow-[inset_0_0_0_1px_#fff] shadow-primary-0 transition-all duration-300 group-hover:w-full"
 				></span>
-			</a>
+			</button>
 			<button
 				onclick="moreInfoWebinar()"
 				class="group relative box-border overflow-hidden rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 transition-all duration-300 md:px-10 md:py-3"
@@ -1357,6 +1356,77 @@
                   class="inline-block border-neutral-300 bg-primary-0 py-3 font-medium text-neutral-600 shadow-lg"
                 >
                   Submission Batch 2
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="relative z-50 hidden opacity-0 transition duration-300"
+      aria-labelledby="modal-title"
+      role="dialog"
+      aria-modal="true"
+      id="modal-registrasi-webinar"
+    >
+      <div class="fixed inset-0 z-10 overflow-y-auto shadow-2xl">
+        <!-- backdrop -->
+        <div
+          class="fixed inset-0 z-20 bg-neutral-700 bg-opacity-75 backdrop-blur-sm transition-opacity duration-700"
+          id="backdrop-registrasi-webinar"
+        ></div>
+        <!-- modal-box -->
+        <div
+          class="absolute left-1/2 top-1/2 z-40 w-96 -translate-x-1/2 -translate-y-1/2 p-4 text-center sm:items-center sm:p-0"
+        >
+          <div
+            class="relative transform rounded-md border bg-primary-0 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-xl"
+          >
+            <!-- close-button -->
+            <button
+              id="close-button-registrasi-webinar"
+              class="group absolute right-2 top-2 z-50 text-neutral-400"
+            >
+              <img
+                src="/assets/img/icons/icons8-close-24.png"
+                alt=""
+                class="h-6 w-6 opacity-80 group-hover:opacity-50"
+              />
+            </button>
+            <div class="relative z-0 h-32 w-full">
+              <img
+                src="/assets/img/mascot-main.png"
+                class="absolute left-1/2 bottom-0 h-auto w-32 -translate-x-1/2"
+              />
+            </div>
+            <div class="relative z-50 rounded-md bg-primary-0">
+              <div class="relative">
+                <div style="text-align-last: center">
+                  <div class="mt-4 text-center">
+                    <h1
+                      class="z-[60] text-3xl font-semibold text-neutral-500"
+                      id="modal-title"
+                    >
+                      Gaskeun!!
+                    </h1>
+                  </div>
+                </div>
+              </div>
+              <div class="mb-5 mt-2">
+                <p class="px-5 text-center text-sm text-neutral-500">
+                  Jangan lupa cek email kalian setelah proses registrasi selesai ya!
+                </p>
+              </div>
+              <div
+                class="flex h-20 w-full flex-col justify-center gap-3 bg-primary-25 px-5 text-center text-sm"
+              >
+                <a
+			  	  href="https://s.id/Techminar"
+                  target="_blank"
+                  class="inline-block rounded-sm bg-neutral-600 px-6 py-3 text-neutral-0 shadow-lg"
+                >
+                  Registrasi
                 </a>
               </div>
             </div>
